프론트엔드 디자인 변경

--- a/StatusPage/public/index.html
+++ b/StatusPage/public/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://status.skylightqp.kr">하늘빛 상태</a>
+                <a class="navbar-brand" href="http://status.skylightqp.kr">상태</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -62,20 +62,70 @@
     <div class="container">
         <raw>
             <div class="col-md-6">
-                <div class="panel panel-default">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><b>Test</b></h3>
+                    </div>
                     <div class="panel-body">
-                        <h2>Test</h2>
-                        <hr>
                         <p><i class="fa fa-check-circle text-success fa-fw" aria-hidden="true"></i> 서버가 정상 가동 중입니다.</p>
                         <small>- 대한민국 서부</small>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="panel panel-default">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><b>Test</b></h3>
+                    </div>
                     <div class="panel-body">
-                        <h2>Test</h2>
-                        <hr>
+                        <p><i class="fa fa-times-circle text-danger fa-fw" aria-hidden="true"></i> 서버가 닫혀있습니다.</p>
+                        <small>- 대한민국 동부</small>
+                    </div>
+                </div>
+            </div>
+        </raw>
+        <raw>
+            <div class="col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><b>Test</b></h3>
+                    </div>
+                    <div class="panel-body">
+                        <p><i class="fa fa-check-circle text-success fa-fw" aria-hidden="true"></i> 서버가 정상 가동 중입니다.</p>
+                        <small>- 대한민국 서부</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><b>Test</b></h3>
+                    </div>
+                    <div class="panel-body">
+                        <p><i class="fa fa-times-circle text-danger fa-fw" aria-hidden="true"></i> 서버가 닫혀있습니다.</p>
+                        <small>- 대한민국 동부</small>
+                    </div>
+                </div>
+            </div>
+        </raw>
+        <raw>
+            <div class="col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><b>Test</b></h3>
+                    </div>
+                    <div class="panel-body">
+                        <p><i class="fa fa-check-circle text-success fa-fw" aria-hidden="true"></i> 서버가 정상 가동 중입니다.</p>
+                        <small>- 대한민국 서부</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><b>Test</b></h3>
+                    </div>
+                    <div class="panel-body">
                         <p><i class="fa fa-times-circle text-danger fa-fw" aria-hidden="true"></i> 서버가 닫혀있습니다.</p>
                         <small>- 대한민국 동부</small>
                     </div>
@@ -83,5 +133,11 @@
             </div>
         </raw>
     </div>
+    <footer class="footer">
+        <hr>
+        <div class="text-center">
+            <span class="text-muted">Copyright 2018. SkyLightQP. All rights reserved.</span>
+        </div>
+    </footer>
 </body>
 </html>
