--- a/statuspage/app.html
+++ b/statuspage/app.html
@@ -3,7 +3,8 @@
   <head>
     <title>하늘빛 | 상태</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Social -->
     <link rel="canonical" href="http://status.skylightqp.kr">
     <meta property="og:type" content="website">
